@@ -21,21 +21,21 @@ import com.rtsbuilding.rtsbuilding.server.storage.resolver.RtsLinkedStorageResol
 import com.rtsbuilding.rtsbuilding.server.storage.session.RtsStorageSession;
 import com.rtsbuilding.rtsbuilding.server.util.TemporaryContextSwitcher;
 import com.rtsbuilding.rtsbuilding.server.util.TemporaryContextSwitcher.RayContext;
-import net.minecraft.core.BlockPos;
-import net.minecraft.core.Direction;
-import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.server.level.ServerLevel;
-import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.world.InteractionHand;
-import net.minecraft.world.InteractionResult;
-import net.minecraft.world.entity.Entity;
-import net.minecraft.world.inventory.AbstractContainerMenu;
-import net.minecraft.world.item.BlockItem;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.level.block.state.BlockState;
-import net.minecraft.world.phys.BlockHitResult;
-import net.minecraft.world.phys.Vec3;
+import net.minecraft.block.state.IBlockState;
+import net.minecraft.entity.Entity;
+import net.minecraft.entity.player.EntityPlayerMP;
+import net.minecraft.inventory.Container;
+import net.minecraft.item.Item;
+import net.minecraft.item.ItemBlock;
+import net.minecraft.item.ItemStack;
+import net.minecraft.util.EnumActionResult;
+import net.minecraft.util.EnumFacing;
+import net.minecraft.util.EnumHand;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.RayTraceResult;
+import net.minecraft.util.math.Vec3d;
+import net.minecraft.world.WorldServer;
 
 /**
  * {@link InteractionService} 的默认实现——处理 RTS 模式下与方块/实体的远程交互。
@@ -53,7 +53,7 @@ public final class RtsInteractionServiceImpl implements InteractionService {
     private final ServiceRegistry registry = ServiceRegistry.getInstance();
 
     @Override
-    public void interactTarget(ServerPlayer player, int entityId, BlockPos clickedPos, Direction face,
+    public void interactTarget(EntityPlayerMP player, int entityId, BlockPos clickedPos, EnumFacing face,
                                double hitX, double hitY, double hitZ,
                                byte sourceType, byte toolSlot, String itemId,
                                double rayOriginX, double rayOriginY, double rayOriginZ,
@@ -70,67 +70,70 @@ public final class RtsInteractionServiceImpl implements InteractionService {
                 rayOriginX, rayOriginY, rayOriginZ,
                 rayDirX, rayDirY, rayDirZ);
 
-        ServerLevel level = player.serverLevel();
+        WorldServer level = player.getServerWorld();
         Entity targetEntity = null;
-        BlockHitResult blockHit = null;
+        RayTraceResult blockHit = null;
         BlockPos effectiveBlockPos = null;
-        BlockState beforeClicked = null;
+        IBlockState beforeClicked = null;
         BlockPos adjacentPos = null;
-        BlockState beforeAdjacent = null;
+        IBlockState beforeAdjacent = null;
         boolean useItemInAir = sourceType == C2SRtsInteractPayload.SOURCE_TOOL_SLOT_AIR;
 
         if (entityId >= 0) {
-            targetEntity = level.getEntity(entityId);
-            if (targetEntity == null || !targetEntity.isAlive()) {
+            targetEntity = level.getEntityByID(entityId);
+            if (targetEntity == null || !targetEntity.isEntityAlive()) {
                 return;
             }
-            effectiveBlockPos = targetEntity.blockPosition();
-            if (!level.hasChunkAt(effectiveBlockPos) || !level.mayInteract(player, effectiveBlockPos)) {
+            effectiveBlockPos = targetEntity.getPosition();
+            if (!level.isBlockLoaded(effectiveBlockPos) || !level.isBlockModifiable(player, effectiveBlockPos)) {
                 return;
             }
         } else {
             if (clickedPos == null || !RtsLinkedStorageResolver.canAccessWorldTarget(player, clickedPos)) {
                 return;
             }
-            effectiveBlockPos = clickedPos.immutable();
+            effectiveBlockPos = clickedPos.toImmutable();
             if (!useItemInAir) {
-                blockHit = new BlockHitResult(new Vec3(hitX, hitY, hitZ), face, effectiveBlockPos, false);
+                blockHit = new RayTraceResult(
+                        new Vec3d(hitX, hitY, hitZ),
+                        face == null ? EnumFacing.UP : face,
+                        effectiveBlockPos);
                 beforeClicked = level.getBlockState(effectiveBlockPos);
-                adjacentPos = effectiveBlockPos.relative(face);
-                beforeAdjacent = level.hasChunkAt(adjacentPos) ? level.getBlockState(adjacentPos) : null;
+                adjacentPos = effectiveBlockPos.offset(blockHit.sideHit);
+                beforeAdjacent = level.isBlockLoaded(adjacentPos) ? level.getBlockState(adjacentPos) : null;
             }
         }
 
         ItemStack toolSnapshot = sourceType == C2SRtsInteractPayload.SOURCE_TOOL_SLOT || sourceType == C2SRtsInteractPayload.SOURCE_TOOL_SLOT_AIR
-                ? player.getInventory().getItem(RtsMiningValidator.clampHotbarSlot(toolSlot)).copy()
+                ? player.inventory.getStackInSlot(RtsMiningValidator.clampHotbarSlot(toolSlot)).copy()
                 : ItemStack.EMPTY;
         ItemStack soundStack = sourceType == C2SRtsInteractPayload.SOURCE_PIN_ITEM
                 ? SoundService.createSoundStack(itemId)
                 : toolSnapshot.copy();
-        ItemStack protectionStack = soundStack.isEmpty() ? ItemStack.EMPTY : soundStack.copyWithCount(1);
+        ItemStack protectionStack = oneItemCopy(soundStack);
         if (targetEntity != null && !RtsClaimProtectionService.canInteractEntity(
-                player, targetEntity, InteractionHand.MAIN_HAND, protectionStack, false)) {
+                player, targetEntity, EnumHand.MAIN_HAND, protectionStack, false)) {
             return;
         }
         if (blockHit != null) {
-            Direction hitFace = blockHit.getDirection();
+            EnumFacing hitFace = blockHit.sideHit;
             if (!RtsClaimProtectionService.canInteractBlock(
-                    player, effectiveBlockPos, hitFace, InteractionHand.MAIN_HAND, protectionStack)) {
+                    player, effectiveBlockPos, hitFace, EnumHand.MAIN_HAND, protectionStack)) {
                 return;
             }
-            if (!protectionStack.isEmpty() && protectionStack.getItem() instanceof BlockItem
+            if (!protectionStack.isEmpty() && protectionStack.getItem() instanceof ItemBlock
                     && !RtsClaimProtectionService.canPlaceBlock(
                             player, interactionPlacementTarget(level, effectiveBlockPos, hitFace))) {
                 return;
             }
         }
 
-        InteractionResult result = InteractionResult.PASS;
-        Vec3 hit = new Vec3(hitX, hitY, hitZ);
+        EnumActionResult result = EnumActionResult.PASS;
+        Vec3d hit = new Vec3d(hitX, hitY, hitZ);
         if (blockHit != null) {
             RtsRemoteMenuService.sendRemoteMenuOpenHint(player, effectiveBlockPos);
         }
-        AbstractContainerMenu menuBeforeInteract = player.containerMenu;
+        Container menuBeforeInteract = player.openContainer;
 
         if (sourceType == C2SRtsInteractPayload.SOURCE_TOOL_SLOT) {
             result = RtsToolSlotInteractor.interactWithToolSlot(player, level, targetEntity, blockHit, hit, toolSlot, rayContext);
@@ -142,18 +145,18 @@ public final class RtsInteractionServiceImpl implements InteractionService {
             result = RtsEmptyHandInteractor.interactWithEmptyHand(player, level, targetEntity, blockHit, hit, rayContext);
         }
 
-        AbstractContainerMenu menuAfterInteract = player.containerMenu;
+        Container menuAfterInteract = player.openContainer;
         if (menuAfterInteract != menuBeforeInteract) {
             RtsRemoteMenuService.markRemoteMenuOpen(player, session, menuAfterInteract, effectiveBlockPos);
         }
 
         boolean playedSpecificSound = false;
-        if (result.consumesAction() && blockHit != null && beforeClicked != null) {
+        if (consumesAction(result) && blockHit != null && beforeClicked != null) {
             BlockPos placedPos = RtsPlacementHelper.detectPlacedPos(
                     level, effectiveBlockPos, beforeClicked, adjacentPos, beforeAdjacent);
             if (placedPos != null) {
                 PlacedBlockTrackerData.get(level).mark(placedPos);
-                if (!soundStack.isEmpty() && soundStack.getItem() instanceof BlockItem) {
+                if (!soundStack.isEmpty() && soundStack.getItem() instanceof ItemBlock) {
                     RtsPlacementSound.playRemotePlacedBlockAnimation(player, placedPos);
                     RtsPlacementSound.playRemotePlacedBlockSound(player, level, placedPos);
                 } else {
@@ -162,14 +165,15 @@ public final class RtsInteractionServiceImpl implements InteractionService {
                 playedSpecificSound = true;
             }
         }
-        if (result.consumesAction()) {
+        if (consumesAction(result)) {
             if (!playedSpecificSound) {
                 SoundService.playRemoteUseSound(player, level, targetEntity, effectiveBlockPos, soundStack);
             }
-            if (sourceType == C2SRtsInteractPayload.SOURCE_PIN_ITEM && itemId != null && !itemId.isBlank()) {
+            if (sourceType == C2SRtsInteractPayload.SOURCE_PIN_ITEM
+                    && itemId != null && !itemId.trim().isEmpty()) {
                 registry.page().recordRecentItem(session, itemId, S2CRtsStoragePagePayload.RECENT_ITEM_USED, 1L);
             } else if (!toolSnapshot.isEmpty()) {
-                ResourceLocation toolId = BuiltInRegistries.ITEM.getKey(toolSnapshot.getItem());
+                ResourceLocation toolId = Item.REGISTRY.getNameForObject(toolSnapshot.getItem());
                 if (toolId != null) {
                     registry.page().recordRecentItem(session, toolId.toString(), S2CRtsStoragePagePayload.RECENT_ITEM_USED, 1L);
                 }
@@ -179,10 +183,26 @@ public final class RtsInteractionServiceImpl implements InteractionService {
         registry.page().requestPage(player, session.browser.page, session.browser.search, session.browser.category, session.browser.sort, session.browser.ascending, false);
     }
 
-    private static BlockPos interactionPlacementTarget(ServerLevel level, BlockPos clickedPos, Direction face) {
-        if (level.hasChunkAt(clickedPos) && level.getBlockState(clickedPos).canBeReplaced()) {
+    private static BlockPos interactionPlacementTarget(WorldServer level, BlockPos clickedPos, EnumFacing face) {
+        if (level.isBlockLoaded(clickedPos)
+                && level.getBlockState(clickedPos).getBlock().isReplaceable(level, clickedPos)) {
             return clickedPos;
         }
-        return clickedPos.relative(face);
+        return clickedPos.offset(face == null ? EnumFacing.UP : face);
+    }
+
+    /** 保护模组只需要一个用于判权的副本，绝不能缩减真实工具或储存堆。 */
+    private static ItemStack oneItemCopy(ItemStack stack) {
+        if (stack == null || stack.isEmpty()) {
+            return ItemStack.EMPTY;
+        }
+        ItemStack copy = stack.copy();
+        copy.setCount(1);
+        return copy;
+    }
+
+    /** 1.12.2 没有 consumesAction；SUCCESS 是唯一表示动作已被消费的结果。 */
+    private static boolean consumesAction(EnumActionResult result) {
+        return result == EnumActionResult.SUCCESS;
     }
 }
